@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.174 2010/05/04 18:55:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.175 2010/07/04 06:42:28 arfrever Exp $
+
+*zope-2.12.6 (04 Jul 2010)
+
+  04 Jul 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-2.12.4.ebuild, +zope-2.12.6.ebuild:
+  Version bump.
 
   04 May 2010; Raúl Porcel <armin76@gentoo.org> zope-2.9.12.ebuild,
   zope-2.10.11.ebuild:
